HOW DID I FORGET TO REMOVE THE TOKEN
I just got a message from Safety Jim letting me know and BY GOD did that spook me

--- a/_settings.ini
+++ b/_settings.ini
@@ -1,6 +1,6 @@
 [UserSettings]
-;LIVE TOKEN
-token = NzAxMDM0NzIzMjQ1NDI0NzMy.Xprndg.WxHNKFLils6BHW7z8mL-z4uKxHM
+;Place your token here - don't share it around!
+token = 
 
 ;If you want to change your command prefix, replace the "tnm!" with your desired prefix.
 Prefix = tnm!
